fix: reorder proxies and reduce timeouts

--- a/player.html
+++ b/player.html
@@ -227,7 +227,7 @@
       try {
           console.log("Player starting...");
           // Force new version for cache busting
-        const v = "20260212-fix-playback";
+        const v = "20260212-fix-playback-v2";
         const { mountAppShell } = await import(`./js/router.js?v=${v}`);
         const { initPlayer } = await import(`./js/player.js?v=${v}`);
 
