Fix DOM insertion error for external player button

--- a/player.html
+++ b/player.html
@@ -228,7 +228,7 @@
       try {
           console.log("Player starting...");
           // Force new version for cache busting
-        const v = "20260213-panic-btn";
+        const v = "20260213-fix-insert";
         const { mountAppShell } = await import(`./js/router.js?v=${v}`);
         const { initPlayer } = await import(`./js/player.js?v=${v}`);
 
