--- a/player.html
+++ b/player.html
@@ -228,7 +228,7 @@
       try {
           console.log("Player starting...");
           // Force new version for cache busting
-        const v = "20260213-final-fix-v2";
+        const v = "20260213-final-fix-v3-raw-url";
         const { mountAppShell } = await import(`./js/router.js?v=${v}`);
         const { initPlayer } = await import(`./js/player.js?v=${v}`);
 
