--- a/player.html
+++ b/player.html
@@ -227,8 +227,8 @@
 
       try {
           console.log("Player starting...");
-          // Force new version for cache busting
-        const v = "20260213-final-fix-v4-abort-check";
+          // FORCE CACHE BUSTING - Version: 20260213-final-fix-v5-lock-and-proxy
+        const v = "20260213-final-fix-v5-lock-and-proxy";
         const { mountAppShell } = await import(`./js/router.js?v=${v}`);
         const { initPlayer } = await import(`./js/player.js?v=${v}`);
 
