--- a/player.html
+++ b/player.html
@@ -227,8 +227,8 @@
 
       try {
           console.log("Player starting...");
-          // FORCE CACHE BUSTING - Version: 20260213-final-fix-v6-no-button
-        const v = "20260213-final-fix-v6-no-button";
+          // FORCE CACHE BUSTING - Version: 20260213-final-fix-v7-crossorigin
+        const v = "20260213-final-fix-v7-crossorigin";
         const { mountAppShell } = await import(`./js/router.js?v=${v}`);
         const { initPlayer } = await import(`./js/player.js?v=${v}`);
 
